--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -535,13 +535,13 @@ ul.row {
 
 }
 
-.col-1-3 {
+/* .col-1-3 {
     width: 33.33%;
 }
   
 .col-1-2 {
     width: 50%;
-}
+} */
 
 .footer {
     padding: var(--footer-padding);
