--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -587,7 +587,7 @@ ul.row {
     padding: 0;
     list-style-type: none;
 }
-.col-1-3 {
+/* .col-1-3 {
     width: 33.33%;
     float: left;
     padding: 0.5rem;
@@ -597,7 +597,7 @@ ul.row {
     width: 50%;
     float: left;
     padding: 0.5rem;
-}
+} */
 
 .row::after{
     content: "";
