--- a/0x02-CSS_advanced/styles/22-style.css
+++ b/0x02-CSS_advanced/styles/22-style.css
@@ -465,7 +465,7 @@ a:active {
     margin: var(--section-tagline-margin);
 }
 
-[data-section-theme=“dark”]{
+[data-section-theme="dark"] {
   --text-color: var(--color-white);
   --section-title-color: var(--color-white);
   background-color: var(--color-black);
