--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -498,6 +498,13 @@ a:active {
     margin: var(--section-tagline-margin);
 }
 
+[data-section-theme="dark"] {
+  --text-color: var(--color-white);
+  --section-title-color: var(--color-white);
+  background-color: var(--color-black);
+  --button-color:var(--color-white);
+}
+
 .container {
     width: 960px;
     margin-left: auto;
@@ -587,17 +594,6 @@ ul.row {
     padding: 0;
     list-style-type: none;
 }
-/* .col-1-3 {
-    width: 33.33%;
-    float: left;
-    padding: 0.5rem;
-}
-
-.col-1-2 {
-    width: 50%;
-    float: left;
-    padding: 0.5rem;
-} */
 
 .row::after{
     content: "";
@@ -617,13 +613,6 @@ ul.row {
   
 .col-1-2 {
     width: 50%;
-}
-
-[data-section-theme=“dark”]{
-    --text-color: var(--color-white);
-    --section-title-color:var(--color-white);
-    background-color: var(--color-black);
-    --button-color:var(--color-white);
 }
 
 .card-services .card-title {
