--- a/0x02-CSS_advanced/styles/28-style.css
+++ b/0x02-CSS_advanced/styles/28-style.css
@@ -366,8 +366,8 @@ html {
     --color-light-grey: #f3f3f3;
     --color-dark-grey: #353535;
     --text-color: var(--color-black);
-    --font-family-base:"Open Sans",'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title:Raleway,'Helvetica Neue' Helvetica, Arial, sans-serif;
+    --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    --font-family-title: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
     --font-size-small:1.2rem;
     --font-size-medium:1.6rem;
     --font-size-large:1.8rem;
@@ -410,7 +410,7 @@ html {
     --header-logo-link-display: inline-block;
     --header-logo-link-position: absolute;
     --header-logo-link-top: -1rem;
-    --header-logo-link-left:0;
+    --header-logo-link-left: 0;
 }
 
 body {
@@ -565,17 +565,6 @@ ul.row {
     padding: 0;
     list-style-type: none;
 }
-.col-1-3 {
-    width: 33.33%;
-    float: left;
-    padding: 0.5rem;
-}
-
-.col-1-2 {
-    width: 50%;
-    float: left;
-    padding: 0.5rem;
-}
 
 .row::after{
     content: "";
@@ -597,11 +586,11 @@ ul.row {
     width: 50%;
 }
 
-[data-section-theme=“dark”]{
-    --text-color: var(--color-white);
-    --section-title-color:var(--color-white);
-    background-color: var(--color-black);
-    --button-color:var(--color-white);
+[data-section-theme="dark"] {
+  --text-color: var(--color-white);
+  --section-title-color: var(--color-white);
+  background-color: var(--color-black);
+    --button-color: var(--color-white);
 }
 
 .card-services .card-title {
