--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -411,7 +411,7 @@ html {
     --header-logo-link-position: absolute;
     --header-logo-link-top: -1rem;
     --header-logo-link-left:0;
-    --transition-duration: 3s;
+    --transition-duration: .3s;
     --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
@@ -752,331 +752,3 @@ ul.row {
 .card-work:hover .card-title {
   opacity: 1;
 }
-
-/* body {
-    color: var(--text-color);
-    font-family: var(--font-family-base);
-    font-size: var(--font-size-medium);
-    font-weight: var(--font-weight-regular);
-    line-height: var(--line-height-base);
-}
-
-a:link {
-    color: var(--text-color);
-    text-decoration: none;
-}
-
-a:visited{
-    font-style: italic;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-a:active {
-    background-color: var(--color-light-grey);
-}
-.button {
-    display: var(--button-display);
-    padding: var(--button-padding);
-    border: var(--button-border);
-    font-size: var(--button-font-size);
-    color: var(--button-color);
-    text-decoration: var(--button-text-decoration);
-}
-
-.button:hover {
-    color: var(--button-hover-color);
-    text-decoration: var(--button-hover-text-decoration);
-    background-color: var(--button-hover-background);
-    transition-duration: var(--transition-duration);
-    transition-property: color, background-color;
-}
-
-.visually-hidden {
-    display: none;
-}
-
-.card-category {
-    color: var(--color-primary)
-}
-
-.section{
-    padding: var(--section-body-padding);
-}
-
-.section-header {
-    text-align: var(--section-header-align);
-    padding: var(--section-header-padding);
-}
-
-.section-body {
-    padding: var(--section-body-padding);
-}
-
-.section-footer {
-    padding: var(--section-footer-padding);
-    text-align: var(--section-footer-align);
-}
-
-.section-title {
-    font-family: var(--font-family-title);
-    font-size: var(--font-size-xx-large);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-title-margin);
-    color: var(--section-title-color);
-}
-
-.section-tagline {
-    color: var(--color-primary);
-    font-family: var(--font-family-title);
-    text-transform: var(--section-tagline-transform);
-    font-weight: var(--font-weight-bold);
-    margin: var(--section-tagline-margin);
-}
-
-
-
-.container {
-    width: 960px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header {
-    padding: var(--header-padding);
-}
-
-.header-logo {
-    position: var(--header-logo-link-position);
-}
-
-.header-logo a{
-    display: var(--header-logo-link-display);
-    position: var(--header-logo-link-position);
-    top: var(--header-logo-link-top);
-    left: var(--header-logo-link-left);
-}
-
-.navbar-menu {
-    float: right;
-}
-
-.nav {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    text-align: center;
-    transition: var(–transition-duration) var(transition-cubic-bezier);
-}
-
-.nav .nav-item {
-    font-family: var(--nav-item-font-family);
-    font-weight: var(--nav-item-font-weight);
-    font-size: var(--nav-item-font-size);
-    letter-spacing: var(--nav-item-letter-spacing);
-    display: var(--nav-item-display);
-    margin: var(--nav-item-margin);
-}
-
-.nav .nav-link {
-    display: block;
-    padding: 0.5rem 1rem;
-}
-
-.nav .nav-link:hover {
-    color: var(--nav-item-link-hover);
-}
-
-.nav .nav-link::before{
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: var(--color-white);
-    width: 0;
-    height: 0.2rem;
-    transition: var(–transition-duration) var(transition-cubic-bezier);
-}
-
-.nav .nav-item:hover .nav-link::before {
-    background-color: var(--color-white);
-    width: 100%;
-}
-
-.section-hero {
-    background-size: 90rem auto;
-}
-
-.section-hero .section-title {
-    margin-bottom: 5rem;
-}
-
-.section-hero .section-inner {
-    padding: 10rem 40rem 2rem 0;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-family-title);
-    font-weight: var(--font-weight-bold);
-}
-
-ul.row {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-}
-
-.row::after{
-    content: "";
-    display: table;
-    clear: both;
-}
-
-[class*="col-"] {
-    float: left;
-    padding: .5rem;
-
-}
-
-.col-1-3 {
-    width: 33.33%;
-}
-  
-.col-1-2 {
-    width: 50%;
-}
-
-.card-services .card-title {
-    margin: 0;
-}
-
-.card-services a {
-    display: block;
-    padding: 2rem;
-    background-color: var(--color-light-grey);
-}
-
-.card-services a:hover {
-    color: var(--color-white);
-    background-color: var(--color-primary);
-    text-decoration: none;
-}
-
-.card-testimonial {
-    text-align: center;
-}
-
-.card-testimonial .card-avatar {
-    border-radius: 50%;
-    width: 10rem;
-    height: 10rem;
-}
-
-.card-testimonial .card-quote cite {
-    display: block;
-    padding-top: 1rem;
-    color: var(--color-primary);
-}
-
-.card-work .card-outer {
-    position: relative;
-    overflow: hidden;
-}
-
-.card-work .card-image img{
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-    vertical-align: bottom;
-}
-
-.card-work .card-inner {
-    position: absolute;
-    top: -0.1rem;
-    left: -0.1rem;
-    right: -0.1rem;
-    bottom: -0.1rem;
-    z-index: 1;
-    transition: var(--transition-duration) var(--transition-cubic-bezier);
-}
-
-.card-work:hover .card-inner {
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.card-work:hover .card-image {
-    transform: scale(1.2);
-    transition: var(--transition-duration) var(--transition-cubic-bezier);
-}
-
-.card-work:hover .card-outer{
-    transform: scale(0.95);
-    transition: var(--transition-duration) var(--transition-cubic-bezier);
-}
-
-.card-work .card-title {
-    text-align: center;
-    margin: 0;
-    opacity: 0;
-    height: 100%;
-    position: relative;
-}
-.card-work .card-title a{
-    display: block;
-    text-decoration: none;
-    padding-top: 45%;
-}
-
-.card-work .card-title a::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    content: "";
-}
-
-.card-work:hover .card-title {
-    opacity: 1;
-}
-
-.card-testimonial .card-quote {
-    position: relative;
-}
-
-.card-testimonial .card-quote::before {
-    content: "\201C";
-    position: absolute;
-    top: -4.5rem;
-    left: -1rem;
-    color: #efeded;
-    font-size: 10rem;
-    z-index: -1;
-}
-
-.footer {
-    padding: var(--footer-padding);
-}
-.footer-copyright {
-    margin: 0;
-    font-size: var(--font-size-small);
-    color:var(--text-color);
-}
-
-.footer ul {
-    text-align: right;
-}
-
-.footer-address {
-    color: var(--text-color);
-}
-
-.social-link {
-    display: block;
-}
-
-.social-link > svg {
-    fill: var(--text-color);
-} */
